--- a/portfolio/src/styles/main.sass
+++ b/portfolio/src/styles/main.sass
@@ -1,4 +1,8 @@
 /* não precisa {} ;*/
+@use 'variables'
 
-h1
-    color: red
+*
+    padding: 0
+    margin: 0
+    font-family: "Helvetica"
+    box-sizing: variables.$font-stack
