--- a/portfolio/src/styles/main.sass
+++ b/portfolio/src/styles/main.sass
@@ -6,3 +6,8 @@
     margin: 0
     font-family: "Helvetica"
     box-sizing: variables.$font-stack
+
+body
+    background-color: variables.$body-bg-color
+a, svg
+    transition: .4s
