--- a/portfolio/src/styles/components/sidebar.sass
+++ b/portfolio/src/styles/components/sidebar.sass
@@ -7,3 +7,12 @@
     display: flex
     align-items: center
     flex-direction: column
+    text-align: center
+    position: relative
+    padding: 3rem 0
+
+    img
+        max-width: 70%
+        border-radius: variables.$container-border-radius
+        position: absolute
+        top: -3rem
