--- a/portfolio/src/styles/components/app.sass
+++ b/portfolio/src/styles/components/app.sass
@@ -1,4 +1,5 @@
 @use '../variables'
+@use '../mixins'
 
 #portfolio
     display: flex
@@ -13,4 +14,7 @@
         background: variables.$gradient
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
+    
+
+    
         
